# stock-management-backend

./: .gitignore  Procfile  pyproject.toml
apps/branches/: admin.py  models.py  serializers.py  views.py
apps/products/: admin.py  models.py  serializers.py  views.py
apps/reports/: admin.py  models.py  serializers.py  views.py
apps/suppliers/: admin.py  models.py  serializers.py  views.py
apps/users/: admin.py  models.py  serializers.py  views.py
config/: .env.example  settings.py  urls.py
